Update Assignment -1TMDB Box Office Prediction.ipynb

--- a/Assignment -1TMDB Box Office Prediction.ipynb
+++ b/Assignment -1TMDB Box Office Prediction.ipynb
@@ -5,7 +5,7 @@
    "id": "4c1f935f",
    "metadata": {},
    "source": [
-    "## Assignment 1- TMDB Box Office Prediction"
+    "##  TMDB Box Office Prediction"
    ]
   },
   {
